--- a/src/app/components/education/education.component.css
+++ b/src/app/components/education/education.component.css
@@ -1,23 +1,10 @@
-.edu-div-container {
-    /* position: absolute;
-    left: 330px;
-    top: 800px; */
-    /* width: 900px; */
-    width: 50%;
-    box-sizing: border-box;
-}
+/* .ubicacion-exp {
+    display: flex;
+    justify-content: flex-end;
+} */
 
-.border-right {
-    /* border: 5px red solid; */
-    border-right: 2px;
-    border-right-style: solid;
-    border-color: rgb(170, 168, 168);
-}
-
-.th-icono-education {
+.th-icono-work {
     padding-top: 1px;
-    /* position: relative;
-    right: 15px; */
     width: 60px;
 }
 
@@ -27,48 +14,44 @@
     color: #4b4747;
     font-family: serif;
     margin: 12px;
+    display: block;
+}
+
+.li-exp {
+    /* width: 11cm; */
+    line-height: 18px;
+    padding-bottom: 8px;
+}
+
+.ul-exp {
+    margin-top: 15px;
+    margin-bottom: 8px;
+    padding-inline-start: 25px;
 }
 
 table {
-    /* margin: 0 auto; */
+    margin-left: auto;
     font-family: serif;
-    color: #4b4747;
+    color: rgb(60, 60, 60);
     font-size: 18px;
 }
 
-.edu-periodo {
-    width: 250px;
+.job-periodo {
+    text-align: end;
+    /* width: 135px; */
+    /* margin-left: 100px; */
 }
 
-.ul-education {
-    width: 500px;
-    /* margin-top: 15px;
-    margin-bottom: 8px; */
-    margin-block-start: 0px;
-    margin-block-end: 0px;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    padding-inline-start: 0px;
-    /* padding-inline-start: 5px; */
-}
-
-.li-edu {
-    width: 11cm;
-    line-height: 18px;
-    padding-bottom: 5px;
-}
-
-.titulo {
+.cargo-style {
     font-weight: bolder;
     font-size: 20px;
-    width: 500px;
 }
 
-.div-ul {
-    padding-bottom: 0%;
+@media only screen and (max-width: 768px) {
+    .job-periodo {
+        text-align: start;
+        /* background-color: red; */
+        /* width: 135px; */
+        /* margin-left: 100px; */
+    }
 }
-
-
-/* .institucion {
-    line-height: 10px;
-} */
