--- a/src/app/components/education/education.component.html
+++ b/src/app/components/education/education.component.html
@@ -1,88 +1,34 @@
-<div class="edu-div-container border-right">
-    <div>
-        <table>
-            <tr>
-                <th class="th-icono-education">
+<div class="ubicacion-exp">
+    <div class="exp-div-container">
+        <div>
+            <div class="row">
+                <div class="th-icono-work ">
                     <img src="assets/img/education.png">
-                </th>
-                <th>
-                    <h2 class="title-workexp ">EDUCATION</h2>
-                </th>
-            </tr>
-        </table>
-    </div>
-    <div>
-        <table>
-            <tr>
-                <td class="titulo">{{edus.edu1.titulo}}</td>
-                <td class="edu-pediodo">{{edus.edu1.periodo}}</td>
-            </tr>
-            <tr class="institucion">{{edus.edu1.institucion}}, {{edus.edu1.ciudadInstitucion}}, {{edus.edu1.paisInstitucion}}</tr>
-            <tr *ngIf="edus.edu1.tecnos.tecno1">
-                <ul class="ul-education">
-                    <li class="li-edu">{{edus.edu1.tecnos.tecno1}}</li>
-                    <li class="li-edu">{{edus.edu1.tecnos.tecno2}}</li>
+                </div>
+                <div class="" style="text-align: start;">
+                    <h2 class="title-workexp">EDUCATION</h2>
+                </div>
+            </div>
+        </div>
+
+        <div *ngFor="let edu of Edus">
+            <div class="row">
+                <div class="cargo-style col-md-8 col-xs-12">{{edu.titulo}}</div>
+                <div class="job-periodo col-md-4 col-xs-12">
+                    <div class="job-periodo">
+                        {{edu.periodo}}
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="empresa col-12">{{edu.institucion}}, {{edu.ciudadInstitucion}}, {{edu.paisInstitucion}}</div>
+            </div>
+
+            <div *ngIf="edu.tecnos">
+                <ul class="ul-exp col-md-11">
+                    <li *ngFor="let tecno of edu.tecnos" class="li-exp">{{tecno}}</li>
                 </ul>
-            </tr>
-        </table>
-    </div>
-    <div>
-        <table>
-            <tr>
-                <td class="titulo">{{edus.edu2.titulo}}</td>
-                <td class="edu-pediodo">{{edus.edu2.periodo}}</td>
-            </tr>
-            <tr class="institucion">{{edus.edu2.institucion}}, {{edus.edu2.ciudadInstitucion}}, {{edus.edu2.paisInstitucion}}</tr>
-            <tr *ngIf="edus.edu2.tecnos.tecno1">
-                <ul class="ul-education">
-                    <li class="li-edu">{{edus.edu2.tecnos.tecno1}}</li>
-                    <li class="li-edu">{{edus.edu2.tecnos.tecno2}}</li>
-                </ul>
-            </tr>
-        </table>
-    </div>
-    <div>
-        <table>
-            <tr>
-                <td class="titulo">{{edus.edu3.titulo}}</td>
-                <td class="edu-pediodo">{{edus.edu3.periodo}}</td>
-            </tr>
-            <tr class="institucion">{{edus.edu3.institucion}}, {{edus.edu3.ciudadInstitucion}}, {{edus.edu3.paisInstitucion}}</tr>
-            <tr *ngIf="edus.edu3.tecnos.tecno1">
-                <ul class="ul-education">
-                    <li class="li-edu">{{edus.edu3.tecnos.tecno1}}</li>
-                    <li class="li-edu">{{edus.edu3.tecnos.tecno2}}</li>
-                </ul>
-            </tr>
-        </table>
-    </div>
-    <div>
-        <table>
-            <tr>
-                <td class="titulo">{{edus.edu4.titulo}}</td>
-                <td class="edu-pediodo">{{edus.edu4.periodo}}</td>
-            </tr>
-            <tr>{{edus.edu4.institucion}}, {{edus.edu4.ciudadInstitucion}}, {{edus.edu4.paisInstitucion}}</tr>
-            <tr>
-                <ul>
-                    <li class="li-edu">{{edus.edu4.tecnos.tecno1}}</li>
-                </ul>
-            </tr>
-        </table>
-    </div>
-    <div>
-        <table>
-            <tr>
-                <td class="titulo">{{edus.edu5.titulo}}</td>
-                <td class="edu-pediodo">{{edus.edu5.periodo}}</td>
-            </tr>
-            <tr>{{edus.edu5.institucion}}, {{edus.edu5.ciudadInstitucion}}, {{edus.edu5.paisInstitucion}}</tr>
-            <tr>
-                <ul>
-                    <li class="li-edu">{{edus.edu5.tecnos.tecno1}}</li>
-                    <li class="li-edu">{{edus.edu5.tecnos.tecno2}}</li>
-                </ul>
-            </tr>
-        </table>
+            </div>
+        </div>
     </div>
 </div>
