--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -1,6 +1,18 @@
 <div class="ubicacion-skill">
     <div class="skill-div-container">
+        <!--  -->
         <div>
+            <div class="row">
+                <div class="th-icono-skills ">
+                    <img src="assets/img/skill.png">
+                </div>
+                <div class="" style="text-align: start;">
+                    <h2 class="title-skills">SKILLS</h2>
+                </div>
+            </div>
+        </div>
+        <!--  -->
+        <!-- <div>
             <table>
                 <tr>
                     <th class="th-icono-skills">
@@ -11,7 +23,7 @@
                     </th>
                 </tr>
             </table>
-        </div>
+        </div> -->
         <div class="div-h-skills">
             <h3 class="h-skills">Computer Skills</h3>
         </div>
@@ -104,7 +116,13 @@
             <h3 class="h-skills">Interpersonal Skills</h3>
         </div>
         <div class="div-iskill">
-            <h5 class="skill">Ability to Work</h5>
+            <table>
+                <tr>
+                    <th class="th-skill">
+                        <h5 class="skill">Ability to Work</h5>
+                    </th>
+                </tr>
+            </table>
         </div>
         <div class="div-iskill">
             <table>
@@ -174,6 +192,34 @@
                     </th>
                     <th>
                         <img src={{skillLevelHigh}} class="bar">
+                    </th>
+                </tr>
+            </table>
+        </div>
+        <br>
+        <div class="div-h-skills">
+            <h3 class="h-skills">Languages</h3>
+        </div>
+        <div class="div-iskill">
+            <table>
+                <tr>
+                    <th class="th-skill">
+                        <h5 class="skill">English</h5>
+                    </th>
+                    <th>
+                        <img src={{skillLevelHigh}} class="bar">
+                    </th>
+                </tr>
+            </table>
+        </div>
+        <div class="div-iskill">
+            <table>
+                <tr>
+                    <th class="th-skill">
+                        <h5 class="skill">Spanish</h5>
+                    </th>
+                    <th>
+                        <h5 class="bar">Native</h5>
                     </th>
                 </tr>
             </table>
