--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,19 +1,29 @@
-.border-right {
-    /* border: 5px red solid; */
+.content-container {
+    margin-top: 50px;
+    /* margin-left: 100px;
+    margin-right: 100px; */
+}
+
+
+/* .border-right {
+    border: 5px red solid;
     border-right: 2px;
     border-right-style: solid;
     border-color: rgb(170, 168, 168);
-}
+} 
+*/
 
-.posicion-skills {
+
+/* .posicion-skills {
     position: relative;
     left: 910px;
-}
+} */
 
-.posicion-education {
+
+/* .posicion-education {
     position: relative;
     top: 500px;
-}
+} */
 
 
 /* .border-bottom {
@@ -22,10 +32,12 @@
     border-color: rgb(170, 168, 168);
 } */
 
-.main-container {
-    margin-top: 100px;
-}
 
-.component-container {
+/* .main-container {
+    margin-top: 100px;
+} */
+
+
+/* .component-container {
     margin-top: 30px;
-}
+} */
