--- a/src/app/components/datos-personales/datos-personales.component.css
+++ b/src/app/components/datos-personales/datos-personales.component.css
@@ -8,4 +8,6 @@
     display: flex;
     justify-content: space-evenly;
     font-family: serif;
+    border-bottom: 2px solid;
+    border-bottom-color: rgb(60, 60, 60);
 }
