--- a/src/app/components/experience/experience.component.css
+++ b/src/app/components/experience/experience.component.css
@@ -1,20 +1,18 @@
-.ubicacion-exp {
+/* .ubicacion-exp {
     display: flex;
     justify-content: flex-end;
-}
+} */
 
 .exp-div-container {
     /* position: absolute;
     left: 30px; */
     /* width: 900px; */
     /* width: 50%; */
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
 }
 
 .th-icono-work {
     padding-top: 1px;
-    /* position: relative;
-    right: 230px; */
     width: 60px;
 }
 
@@ -25,24 +23,16 @@
     font-family: serif;
     margin: 12px;
     display: block;
-    /* position: relative;
-    right: 230px; */
-    /* font-weight: bold; */
 }
 
 .li-exp {
-    width: 11cm;
+    /* width: 11cm; */
     line-height: 18px;
     padding-bottom: 8px;
 }
 
 .ul-exp {
-    width: 500px;
-    /* padding: 25px; */
     margin-top: 15px;
-    /*!!!!!!!!!!!!!!!!!!!!!!!!!! :)*/
-    /* margin-left: 10px; */
-    /* box-sizing: border-box; */
     margin-bottom: 8px;
     padding-inline-start: 25px;
 }
@@ -50,12 +40,14 @@
 table {
     margin-left: auto;
     font-family: serif;
-    color: #4b4747;
+    color: rgb(60, 60, 60);
     font-size: 18px;
 }
 
 .job-periodo {
-    width: 135px;
+    text-align: end;
+    /* width: 135px; */
+    /* margin-left: 100px; */
 }
 
 .cargo-style {
@@ -64,5 +56,14 @@ table {
 }
 
 .empresa {
-    line-height: 10px;
+    /* line-height: 10px; */
+}
+
+@media only screen and (max-width: 768px) {
+    .job-periodo {
+        text-align: start;
+        /* background-color: red; */
+        /* width: 135px; */
+        /* margin-left: 100px; */
+    }
 }
